--- a/doc/thesis/particlefilters.tex
+++ b/doc/thesis/particlefilters.tex
@@ -81,7 +81,7 @@ Y_k = g(X_k, \nu_y)
 \label{eq:measass}
 \end{eqnarray}
 
-\section{Derivation}
+\section{Sequential Importance Sampling}
 The goal of the particle filter is to evolve an empirical distribution 
 $P(x_k | u_{0:k}, Y_{0:k})$,
 that asymptotically approaches the true probability distribution $P(X_k | u_{0:k})$.
@@ -163,7 +163,7 @@ way the particles are distributed. As new measurements are incorporated,
 the weight will accumulate probabilities through time, which will be discussed
 next. 
 
-\section{Calculating Weights}
+\subsection{Calculating Weights}
 To calculate the weight of a particular particle, it is necessary to 
 calculate both $q(x^i_{0:k} | y_{0:k})$ and $P(x^i_{0:k} | y_{0:k})$.
 Note that $q(x^i_{0:k} | y_{0:k})$ may be simplified by assuming that 
@@ -239,15 +239,16 @@ Thus, by making the following simple assumptions, evolving a posterior
 density  requires no knowledge of noise distribution.
 \begin{enumerate}
 \item $f(t, x(t), u(t)) = f(x(t), u(t))$ and $g(t, x(t), u(t)) = g(x(t))$ 
-\item The PDF $q(x_i(0))$ (the prior) fully covers $P(x_i(0))$
+\item The prior distribution PDF, $q(x_i(0))$, covers $P(x_i(0))$
 \item Markov Property: $P(x_k | x_{0:k-1}) = Pr(x_k | x_{k-1})$
 \item $q(x_{0:k-1} | y_{0:k}) = q(x_{0:k-1} | y_{0:k-1})$
 \end{enumerate}
 
-\subsection{Basic Particle Filter Algorithm}
+\subsection{Basic Algorithm}
 From the definition of $w_i$, the algorithm to calculate
 an approximation of $P(X(t_k) | Y_{0:k})$ or $P(X(t_k + \delta t) | Y_{0:k})$
-is simple.
+is simple. This basic form of the particle filter is given in 
+algorithm \autoref{alg:BasicParticleFilter}.
 
 \begin{algorithm}
 \caption{Sequential Importance Sampling}
@@ -266,9 +267,10 @@ is simple.
 \STATE $P(x(t_k+\Delta t)) \approx 
 \sum_{i=0}^{N_p} w^i_k \delta\left(x - (x^i_k + \int_{t_k}^{t_k+\Delta t} f(x(\tau), u(\tau)) d\tau) \right)$
 \end{algorithmic}
+\label{alg:BasicParticleFilter}
 \end{algorithm}
 
-\section{Resampling}
+\section{Sequential Importance Resampling}
 \label{sec:Particle Filter Resampling}
 As a consequence 
 of the wide prior distribution (required for a proper discretization of a continuous
